--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -177,10 +177,12 @@ mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: b
 
 /* The styles */
 header {
-  margin: 10px auto;
-  text-align: center;
   background-color: #ff00ff;
   border: 2px dotted lime;
+  font-size: 150%;
+  margin-bottom: 20px;
+  padding: 15px;
+  text-align: center;
 }
 
 article {
